--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
 		"jsdom": "^25.0.0",
 		"postcss": "^8.4.41",
 		"prettier": "^3.3.3",
+		"prettier-plugin-tailwindcss": "^0.6.6",
 		"prop-types": "^15.8.1",
 		"shx": "^0.3.4",
 		"storybook": "^8.2.9",
